Fix z-index so that dropdowns show on top of modal dialog.

--- a/client/assets/css/siteVuetify.css
+++ b/client/assets/css/siteVuetify.css
@@ -124,7 +124,7 @@ html {
 }
 
 .menu__content--select.menuable__content__active {
-  z-index: 200 !important;
+  z-index: 204 !important;
 }
 
 .dropdown.open .dropdown-menu {
